# lambda_template

./: .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml  requirements.txt
api/: __init__.py  config.py  main.py
api/core/: crypto.py  email.py  network.py  parser.py  search.py  storage.py  utils.py
api/models/: schemas.py
api/routes/: __init__.py  auth.py  cli.py  email.py  profile.py  upload.py
api/services/: auth.py  cache.py  db.py  fauna.py
api/templates/: index.html
api/templates/email/: email_welcome.html
docker/: api.Dockerfile
prisma/: schema.prisma
prisma/migrations/20220830093312_/: migration.sql
prisma/migrations/20220831074833_/: migration.sql
