[tool.poetry]
name = "stack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.81.0"}
aioboto3 = "^10.0.0"
aiohttp = "^3.8.1"
prisma = "^0.6.6"
pytube = "^12.1.0"
bs4 = "^0.0.1"
lxml = "^4.9.1"
faunadb = "^4.2.0"
python-jose = "^3.3.0"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
